--- a/Computational Nuclear Physics/Project 3 - Radioactive Chain/Project3_RadioChain.ipynb
+++ b/Computational Nuclear Physics/Project 3 - Radioactive Chain/Project3_RadioChain.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Presentation date: 9/7/2024**\n",
     "\n",
-    "# **PROJECT #3:** ***Calculating the time evolution for the amount N and the activity A of nuclei in a radioactive chain***\n",
+    "# **PROJECT #3:** ***Calculating the time evolution for the amount N and the activity R of nuclei in a radioactive chain***\n",
     "**Jupyter Notebook**<br> \n",
     "\n",
     "**Contents:**<br>\n",
