fix markdown Project4_Scattering.ipynb

--- a/Computational Nuclear Physics/Project 4 - Electron Scattering/Project4_Scattering.ipynb
+++ b/Computational Nuclear Physics/Project 4 - Electron Scattering/Project4_Scattering.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **2.2 Charge distribution in a nucleus**"
+    "### **2.2 Charge distribution in a nucleus**"
    ]
   },
   {
