--- a/Computational Nuclear Physics/Project 4 - Electron Scattering/Project4_Scattering.ipynb
+++ b/Computational Nuclear Physics/Project 4 - Electron Scattering/Project4_Scattering.ipynb
@@ -337,7 +337,7 @@
     "def diff_cs_WS(E,theta,R,a,rho_0):\n",
     "    return np.power(E/(2*np.pi),2)*np.power(1/hbarc,4)*np.power(1/q_norm(E,theta),4)*np.power(diff_cs_int_WS(q_norm(E,theta),R,a,rho_0)/eps2_0,2)\n",
     "\n",
-    "# Calculation of the differential cross section (Wood-Saxon)\n",
+    "# Calculation of the differential cross section (Step function)\n",
     "def diff_cs_Step(E,theta,L,rho_0):\n",
     "    return np.power(E/(2*np.pi),2)*np.power(1/hbarc,4)*np.power(1/q_norm(E,theta),4)*np.power(diff_cs_int_Step(q_norm(E,theta),L,rho_0)/eps2_0,2)"
    ]
@@ -398,9 +398,9 @@
     "\n",
     "        elmt_name = find_elmt(Z[i]) # finding element name by atomic number\n",
     "        elmt_names.append(elmt_name)\n",
-    "        rho_vals_G = [] # initializing list to storage for ρ_ch values for the current element (Gauss)\n",
-    "        rho_vals_WS = [] # initializing list to storage for ρ_ch values for the current element (Wood-Saxon)\n",
-    "        rho_vals_Step = [] # initializing list to storage for ρ_ch values for the current element (Wood-Saxon)\n",
+    "        rho_vals_G = [] # initializing list to store ρ_ch values for the current element (Gauss)\n",
+    "        rho_vals_WS = [] # initializing list to store ρ_ch values for the current element (Wood-Saxon)\n",
+    "        rho_vals_Step = [] # initializing list to store ρ_ch values for the current element (Step function)\n",
     "        for j in range(0,plot_points):\n",
     "            rho_val_G = rho_ch_G_norm(radius_vals[j],0,R[i]/2,rho0_G)\n",
     "            rho_val_WS = rho_ch_WS_norm(radius_vals[j],R[i],a[i],rho0_WS)\n",
