--- a/Computational Tools/Part 3 - OpenMP/SET #2/Monte_Carlo_pi_analysis_2.ipynb
+++ b/Computational Tools/Part 3 - OpenMP/SET #2/Monte_Carlo_pi_analysis_2.ipynb
@@ -288,7 +288,7 @@
     "    # Adding title,labels and legend to the plot\n",
     "    plt.title('Pi Estimation Errors vs Total Points')\n",
     "    plt.xlabel('Total Points')\n",
-    "    plt.ylabel('True percent relative error et (%%)')\n",
+    "    plt.ylabel('True percent relative error et (%)')\n",
     "    # Making a log-log plot since we need to investigate the existance of the law of power \n",
     "    plt.xscale('log')\n",
     "    plt.yscale('log')\n",
