--- a/Quantum Mechanics/dot_products_hydrogen.ipynb
+++ b/Quantum Mechanics/dot_products_hydrogen.ipynb
@@ -11,6 +11,8 @@
     "**Implemented by: Ioannis Stergakis**<br>\n",
     "**AEM: 4439**<br>\n",
     "\n",
+    "**Presentaion date: 7/1/2025**<br>\n",
+    "\n",
     "# **PROJECT:** ***Calculating dot products of states in the hydrogen atom***<br>\n",
     "\n",
     "**Dot products to be calculated:**<br>\n",
