--- a/Quantum Mechanics/dot_products_hydrogen.ipynb
+++ b/Quantum Mechanics/dot_products_hydrogen.ipynb
@@ -157,7 +157,7 @@
     "    return 4-ξ\n",
     "\n",
     "# Storaging the Laquerre polynomials in a matrix\n",
-    "def L_vn_list_sym(ξ):\n",
+    "def L_vk_list_sym(ξ):\n",
     "    result = []\n",
     "    result.append(L_30_sym(ξ))\n",
     "    result.append(L_31_sym(ξ))\n",
@@ -184,8 +184,8 @@
     "\n",
     "# Symbolic definition of the radial part R_nl(r)\n",
     "def R_nl_sym(r,n,l,Z):\n",
-    "    L_vn = L_vn_list_sym(2*Z*r/(n*alpha0))[n-2]\n",
-    "    return N_nl_sym(n,l,Z)*(2*Z*r/(n*alpha0))**l*L_vn*smp.exp(-Z*r/(n*alpha0))"
+    "    L_vk = L_vk_list_sym(2*Z*r/(n*alpha0))[n-2]\n",
+    "    return N_nl_sym(n,l,Z)*(2*Z*r/(n*alpha0))**l*L_vk*smp.exp(-Z*r/(n*alpha0))"
    ]
   },
   {
