--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
@@ -638,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2.1 Displaying polytrope grid graphs for the HLPS-2 EOS**"
+    "## **2.1 Displaying polytropic grid graphs for the HLPS-2 EOS**"
    ]
   },
   {
@@ -715,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2.2 Displaying polytrope grid graphs for the HLPS-3 EOS**"
+    "## **2.2 Displaying polytropic grid graphs for the HLPS-3 EOS**"
    ]
   },
   {
@@ -792,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2.3 Displaying common polytrope grid graphs for both the HLPS-2 and HLPS-3 EOSs**"
+    "## **2.3 Displaying common polytropic grid graphs for both the HLPS-2 and HLPS-3 EOSs**"
    ]
   },
   {
