--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1.1 Defininition of constants and basic polytrope relations**"
+    "## **1.1 Defininition of constants and basic polytropic relations**"
    ]
   },
   {
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function that return all the numerical combinations of the parameter Γ\n",
+    "# Function that returns all the numerical combinations of the parameter Γ\n",
     "# given the available choices for Γ and the number of mass density segments\n",
     "def Γ_total_combos_num(Γ_choices,num_segments):\n",
     "\n",
