--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition of the piecewise polytrope function of pressure vs mass density\n",
+    "# Definition of an alternative piecewise polytrope function of energy density vs mass density\n",
     "def E_poly_piecewise_alt(P,ρ_bounds,Pi_vals,Ei_vals,Ki_vals,Γi_vals):\n",
     "    points = len(ρ_bounds)\n",
     "    n = points-1\n",
