--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 1 - Solving the TOV equations for Hadronic and Quark Stars/StudyPolyNS.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1.1 Defininition of constants and basic polytropic relations**"
+    "## **1.1 Definition of constants and basic polytropic relations**"
    ]
   },
   {
