--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 2 - Handling the TOV equations solution data for Exotic Stars/ExoticStarsResults_2.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 2 - Handling the TOV equations solution data for Exotic Stars/ExoticStarsResults_2.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **1.1 Sampling and plotting Slope $(\\frac{dE_c}{dP_c})$ and Energy on center ($E_c$) data, along with the respective $E_c-P_c$ and $\\frac{dE_c}{dP_c} - P_c$ curves**"
+    "#### **1.1 Sampling and plotting Slope $(\\frac{dE_c}{dP_c})$ and Energy on center ($E_c$) data, along with the respective $E_c-P_c$, $\\frac{dE_c}{dP_c} - P_c$ and $c_s-P_c$ curves**"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **2.1 Sampling and plotting Slope $(\\frac{dE_c}{dP_c})$ and Energy on center ($E_c$) data, along with the respective $E_c-P_c$ and $\\frac{dE_c}{dP_c} - P_c$ curves**"
+    "#### **2.1 Sampling and plotting Slope $(\\frac{dE_c}{dP_c})$ and Energy on center ($E_c$) data, along with the respective $E_c-P_c$, $\\frac{dE_c}{dP_c} - P_c$ and $c_s-P_c$ curves**"
    ]
   },
   {
