--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/testing_regress_ML_sl.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/testing_regress_ML_sl.ipynb
@@ -7175,7 +7175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **3.3 Plotting true and prediceted values**"
+    "### **3.3 Plotting true and predicted values**"
    ]
   },
   {
