--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_dtree_regress.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_dtree_regress.ipynb
@@ -16,7 +16,7 @@
     "**AEM: 4439**<br>\n",
     "\n",
     "**Jupyter Notebook: JN4a**<br>\n",
-    "**Name: \"testing_dtree_regress.ipynb\"**<br>\n",
+    "**Name: \"train_test_dtree_regress.ipynb\"**<br>\n",
     "\n",
     "**Description:**<br> \n",
     "**Training and testing the `DecisionTreeRegressor` algorithm:**<br>\n",
