--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_rf_regress.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_rf_regress.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ffe19147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the grid of hyperparameters value for the 'RandomForest' regressor\n",
+    "# Defining the grid of hyperparameters values for the 'RandomForest' regressor\n",
     "rf_grid = {\n",
     "    'n_estimators': [25, 50],\n",
     "    'max_depth': [None, 10, 20],\n",
