--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_gradboost_regress.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/train_test_gradboost_regress.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ffe19147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the grid of hyperparameters value for the 'GradientBoosting' regressor\n",
+    "# Defining the grid of hyperparameters values for the 'GradientBoosting' regressor\n",
     "gradboost_grid = {\n",
     "    'estimator__n_estimators': [50, 100],\n",
     "    'estimator__learning_rate': [0.01, 0.05],\n",
