--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/assessing_summary_ml_reg.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 3 - Training and testing ML regression algorithms/assessing_summary_ml_reg.ipynb
@@ -57,12 +57,12 @@
    "id": "37cc37ae",
    "metadata": {},
    "source": [
-    "## **1.1 Summarizing and saving results in files**"
+    "## **1.1 Summarizing and saving metric results in .csv files**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1a301925",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf2e4ff1",
    "metadata": {},
    "outputs": [
@@ -103,12 +103,12 @@
    "id": "6a515818",
    "metadata": {},
    "source": [
-    "## **1.2 Printing the metric results in PrettyTable format**"
+    "## **1.2 Printing the metrics results in PrettyTable format**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2b583a64",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">Energy on center E_c prediction (MSLE results):\n",
+      ">Energy on center ε_c prediction (MSLE results):\n",
       "+------------------+-------------------------+-------------------------+\n",
       "|  models\\X_type   |     16X_rwsh (ovf.)     |     32X_rwsh (ovf.)     |\n",
       "+------------------+-------------------------+-------------------------+\n",
@@ -126,7 +126,7 @@
       "|     XGBoost      | 6.2497e-03 (2.8894e-03) | 6.2869e-03 (2.1967e-03) |\n",
       "+------------------+-------------------------+-------------------------+\n",
       "\n",
-      ">Energy on center E_c prediction (MSE results):\n",
+      ">Energy on center ε_c prediction (MSE results):\n",
       "+------------------+-------------------------+-------------------------+\n",
       "|  models\\X_type   |     16X_rwsh (ovf.)     |     32X_rwsh (ovf.)     |\n",
       "+------------------+-------------------------+-------------------------+\n",
@@ -140,10 +140,10 @@
    ],
    "source": [
     "# MSLE results\n",
-    "print(\">Energy on center E_c prediction (MSLE results):\")\n",
+    "print(\">Energy on center ε_c prediction (MSLE results):\")\n",
     "assess_ML(star_type=\"NS\",mag_reg=\"enrg\",x_data_types=[\"16X_rwsh\",\"32X_rwsh\"],EOS_type=\"lin\").print_metric_results(\"msle\")\n",
     "# MSE results\n",
-    "print(\"\\n>Energy on center E_c prediction (MSE results):\")\n",
+    "print(\"\\n>Energy on center ε_c prediction (MSE results):\")\n",
     "assess_ML(star_type=\"NS\",mag_reg=\"enrg\",x_data_types=[\"16X_rwsh\",\"32X_rwsh\"],EOS_type=\"lin\").print_metric_results(\"mse\")"
    ]
   },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "f19d9a92",
    "metadata": {},
    "outputs": [
@@ -201,12 +201,12 @@
    "id": "8495d982",
    "metadata": {},
    "source": [
-    "## **2.1 Summarizing and saving metric results in files**"
+    "## **2.1 Summarizing and saving metric results in .csv files**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ec2df47c",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4e63c531",
    "metadata": {},
    "outputs": [
@@ -247,12 +247,12 @@
    "id": "c1810b6b",
    "metadata": {},
    "source": [
-    "## **2.2 Printing the metric results in PrettyTable format**"
+    "## **2.2 Printing the metrics results in PrettyTable format**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "064a5882",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0c85a469",
    "metadata": {},
    "outputs": [
