--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 4 - Training and testing ANN regression models/train_test_dnn3_regress.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 4 - Training and testing ANN regression models/train_test_dnn3_regress.ipynb
@@ -15,19 +15,21 @@
     "**Implemented by: Ioannis Stergakis**<br>\n",
     "**AEM: 4439**<br>\n",
     "\n",
-    "**Jupyter Notebook: JN6a**<br>\n",
-    "**Name: \"testing_dnn3_regress.ipynb\"**<br>\n",
+    "**Jupyter Notebook: JN7**<br>\n",
+    "**Name: \"train_test_dnn3_regress.ipynb\"**<br>\n",
     "\n",
     "**Description:**<br> \n",
-    "**Training and testing `Artificial Neural Networks` with 3 middle layers for regression:**<br>\n",
+    "**Training and testing `Deep Neural Networks` with 3 middle layers for regression:**<br>\n",
     "**1. Building and compiling the networks based on the given train data**<br>\n",
-    "**2. Making the learning curve of the networks**\n",
+    "**2. Assessing the accuracy of the network models using different scorers and metrics**<br>\n",
+    "**3. Making the learning curve of the networks**\n",
     "\n",
     "\n",
     "**Abbrevations:**<br>\n",
     "**1. NS -> Neutron Star**<br>\n",
     "**2. QS -> Quark Star**<br>\n",
-    "**3. ML -> Machine Learning**"
+    "**3. DL -> Deep Learning**<br>\n",
+    "**4. DNN -> Deep Neural Network**"
    ]
   },
   {
