--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 4 - Training and testing ANN regression models/train_test_dnn3_regress.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 4 - Training and testing ANN regression models/train_test_dnn3_regress.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "878b2930",
    "metadata": {},
    "outputs": [
@@ -2928,7 +2928,7 @@
    ],
    "source": [
     "# Building a regression ANN model\n",
-    "regression_ANN(\"linNS_reg_data_pp8mr8s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(\"no\",neurons_enrg_16X,actvs_enrg_16X,drops_enrg_16X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"linNS_dnn3_enrg_16X_rwsh\")"
+    "regression_ANN(\"linNS_reg_data_pp8mr8s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(y_scaling=\"no\",layers_neurons=neurons_enrg_16X,layers_activations=actvs_enrg_16X,layers_dropouts=drops_enrg_16X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"linNS_dnn3_enrg_16X_rwsh\")"
    ]
   },
   {
@@ -2981,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "809d4296",
    "metadata": {},
    "outputs": [
@@ -5807,7 +5807,7 @@
    ],
    "source": [
     "# Building a regression ANN model\n",
-    "regression_ANN(\"linNS_reg_data_pp8mr16s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(\"no\",neurons_enrg_32X,actvs_enrg_32X,drops_enrg_32X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"linNS_dnn3_enrg_32X_rwsh\")"
+    "regression_ANN(\"linNS_reg_data_pp8mr16s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(y_scaling=\"no\",layers_neurons=neurons_enrg_32X,layers_activations=actvs_enrg_32X,layers_dropouts=drops_enrg_32X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"linNS_dnn3_enrg_32X_rwsh\")"
    ]
   },
   {
@@ -5868,7 +5868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "5f923fe2",
    "metadata": {},
    "outputs": [
@@ -8694,7 +8694,7 @@
    ],
    "source": [
     "# Building a regression ANN model\n",
-    "regression_ANN(\"QS_reg_data_pp8mr8s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model('no',neurons_enrg_16X,actvs_enrg_16X,drops_enrg_16X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"QS_dnn3_enrg_16X_rwsh\")"
+    "regression_ANN(\"QS_reg_data_pp8mr8s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(y_scaling='no',layers_neurons=neurons_enrg_16X,layers_activations=actvs_enrg_16X,layers_dropouts=drops_enrg_16X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"QS_dnn3_enrg_16X_rwsh\")"
    ]
   },
   {
@@ -8747,7 +8747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "451da594",
    "metadata": {},
    "outputs": [
@@ -11573,7 +11573,7 @@
    ],
    "source": [
     "# Building a regression ANN model\n",
-    "regression_ANN(\"QS_reg_data_pp8mr16s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(\"no\",neurons_enrg_32X,actvs_enrg_32X,drops_enrg_32X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"QS_dnn3_enrg_32X_rwsh\")"
+    "regression_ANN(\"QS_reg_data_pp8mr16s100_rwshuffled.csv\",mag_reg=\"enrg\",test_ratio=0.2,val_ratio=0.2,samples_per_EOS=100).train_model(y_scaling=\"no\",layers_neurons=neurons_enrg_32X,layers_activations=actvs_enrg_32X,layers_dropouts=drops_enrg_32X,adam_learn_rate=1e-3,train_epochs=1000,batch_size=128,filesave=\"QS_dnn3_enrg_32X_rwsh\")"
    ]
   },
   {
