--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 5 - Final Results/reconstruct_EOS_QS.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 5 - Final Results/reconstruct_EOS_QS.ipynb
@@ -19,7 +19,7 @@
     "**Name: \"reconstruct_EOS_QS.ipynb\"**<br>\n",
     "\n",
     "**Description:**<br> \n",
-    "**Reconstructing EOSs of Quark Stars**\n",
+    "**Reconstructing EoSs of Quark Stars**\n",
     "\n",
     "\n",
     "**Abbrevations:**<br>\n",
