--- a/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 5 - Final Results/metrics_learning curves_final_results.ipynb
+++ b/Thesis - ML and ANNs regression models for Exotic Star's EOSs/Part 5 - Final Results/metrics_learning curves_final_results.ipynb
@@ -21,7 +21,7 @@
     "**Description:**<br> \n",
     "**Obtaining and illustrating the final results of:**<br>\n",
     "**1. Metrics MSLE and MSE**<br>\n",
-    "**2. Learning curves of DNN**\n",
+    "**2. Learning curves of DNN models**\n",
     "\n",
     "\n",
     "**Abbrevations:**<br>\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f523dd00",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7fee2901",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "97dcc1b3",
    "metadata": {},
    "outputs": [
