--- a/Entrance Exam 2025-2026/Solutions.ipynb
+++ b/Entrance Exam 2025-2026/Solutions.ipynb
@@ -5,13 +5,13 @@
    "id": "17df23da",
    "metadata": {},
    "source": [
-    "**MSc Computational Physics AUTH**\n",
+    "**MSc Computational Physics AUTH**<br>\n",
+    "**Mandatory Entrance Exam**<br>\n",
+    "**Academic Year: 2025-2026**<br>\n",
     "\n",
-    "**Mandatory Entrance Exam**\n",
+    "# Python solutions\n",
     "\n",
-    "**Academic Year: 2025-2026**\n",
-    "\n",
-    "**Python solutions - Python version 3.11.6**"
+    "**Python version 3.11.6**"
    ]
   },
   {
@@ -19,14 +19,14 @@
    "id": "2718fbad",
    "metadata": {},
    "source": [
-    "# QUESTION 1\n",
+    "## QUESTION 1\n",
     "\n",
     "Create a programm, where two real numbers are appended as values to the variables a and b. The programm then should calculate and print the value of the expression $(a+b)^2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9cd70a76",
    "metadata": {},
    "outputs": [
@@ -61,14 +61,14 @@
    "id": "dfd703c0",
    "metadata": {},
    "source": [
-    "# QUESTION 2\n",
+    "## QUESTION 2\n",
     "\n",
     "Create a programm, where two numbers are appended as values to the variables a and b. The programm then should switch the values: a should take the value of b and b the value of a."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8c565dd7",
    "metadata": {},
    "outputs": [
@@ -118,14 +118,14 @@
    "id": "34cf3ba2",
    "metadata": {},
    "source": [
-    "# QUESTION 3\n",
+    "## QUESTION 3\n",
     "\n",
     "Create a programm, which reads from the keybord a positive integer number. The programm should then calculate and print the value of the factorial of this number $(n!=1*2*3*...*n)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7c4eb9f3",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The factorial 6! is: 720\n"
+      "The factorial 5! is: 120\n"
      ]
     }
    ],
@@ -164,14 +164,14 @@
    "id": "0ff27012",
    "metadata": {},
    "source": [
-    "# QUESTION 4\n",
+    "## QUESTION 4\n",
     "\n",
     "Create a programm, which reads from the keybord a positive integer number in the interval $[2,1000]$ and prints if the number is a prime number."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "83d8706f",
    "metadata": {},
    "outputs": [
@@ -179,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found division by 5 besides 55 and 1\n",
-      "Number 55 IS NOT a prime number\n"
+      "Found division by 3 besides 15 and 1\n",
+      "Number 15 IS NOT a prime number\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
    "id": "6d4ab4b1",
    "metadata": {},
    "source": [
-    "# QUESTION 5\n",
+    "## QUESTION 5\n",
     "\n",
     "In order to find the root of a function $f(x)$ using the Newton-Raphson method we execute the following iterative process\n",
     "\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "3841681c",
    "metadata": {},
    "outputs": [
